--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,158 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.posts-container {
+  display: flex;
+  flex-wrap: wrap;
+
+  @media screen and (max-width:768px) {
+    width: 100%;
+  }
+
+  @media screen and (max-width:567px) {
+    width: 100%;
+  }
+
+}
+
+.container{
+  background-color: black;
+  margin-top: -19px;
+}
+
+.post-card {
+  height: 380px;
+  width: 275px;
+  padding: 5px;
+  margin: 5px;
+  border: 1px solid black;
+  overflow: hidden;
+  background-color: rgb(173, 49, 49);
+
+  @media screen and (max-width:1024px) {
+    width: 31%;
+  }
+
+  @media screen and (max-width:768px) {
+    width: 47%;
+  }
+
+  @media screen and (max-width:567px) {
+    width: 100%;
+  }
+}
+
+.post-card img {
+  height: 200px;
+  width: 100%;
+}
+
+.post_title {
+  text-decoration: none;
+  white-space: wrap;
+  height: 20px;
+  text-overflow: clip;
+  overflow: hidden;
+  text-transform: capitalize;
+  color: white;
+  font-weight: 800;
+}
+
+.post-link {
+  text-decoration: none;
+
+}
+
+.post_body {
+  text-decoration: none;
+  white-space: wrap;
+  overflow: hidden;
+  text-overflow: clip;
+  height: 48px;
+  margin-bottom: 0;
+  color: white;
+}
+
+.show {
+  display: inline;
+  color: white;
+}
+
+.Post-detail-page {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+.inner-post {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background-color: orange;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+/* .inner-cart {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+} */
+.inner-post img {
+  margin-top: 10px;
+  width: 50%;
+  margin-left: 25%;
+}
+
+.inner-post a {
+
+  text-decoration: none;
+  color: white;
+  padding: 10px 20px;
+  background-color: black;
+}
+
+.cart_container {
+  display: flex;
+  flex-direction: column;
+}
+
+.inner_cart {
+  display: flex;
+  flex-direction: row;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: black;
+  color: white;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: white;
+  margin-left: 10px;
+  right: 10px;
+}
+
+.check_list {
+  float: right;
+}
+
+.checklist table,
+tr {
+  width: 100%;
+}
+
+.checklist table,
+th,
+td {
+  width: 100%;
+  border: 2px solid black;
 }
